# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: build-and-tests.yml  ci.yml  pyci.yml
gendiff/: __init__.py  choose_format.py  cli.py  compare_format.py  data.py  formatter.py  generate_diff.py  generator.py  parser.py
gendiff/formaters/: json.py  plain.py  string_format.py  stylish.py
gendiff/scripts/: gendiff.py  generator.py
tests/: test_generator.py  test_parser.py
tests/fixtures/: test_json.txt
