[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Igor <GIV_84@mail.ru>"]
readme = "README.md"
packages = [
   {include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
argparse = "^1.4.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"